<resources>
    <string name="app_name" translatable="false">FairerEmail</string>
    <string name="app_copyright" translatable="false">Copyright &#x24B8; 2018–2019 by M. Bokhorst</string>
    <string name="app_search">FairEmail search</string>
    <string name="app_changelog">Changelog</string>
    <string name="app_welcome">FairEmail is an open source email app focused on privacy and security. For this reason some features might work differently from what you are used to.</string>
    <string name="app_limitations">For example, messages will always be reformatted to remove unsafe elements and to improve readability and opening links needs to be confirmed for safety.</string>
    <string name="app_eula" translatable="false">THIS SOFTWARE IS PROVIDED BY THE AUTHOR \'\'AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="app_crash">FairEmail is not supported on this device because bugs in Android cause crashes</string>
    <string name="app_exit">Go \'back\' again to exit</string>
    <string name="channel_service">Service</string>
    <string name="channel_send">Send</string>
    <string name="channel_notification">Notifications</string>
    <string name="channel_update">Updates</string>
    <string name="channel_warning">Warnings</string>
    <string name="channel_error">Errors</string>
    <string name="channel_group_contacts">Contacts</string>
    <plurals name="page_conversation">
        <item quantity="one">Conversation</item>
        <item quantity="other">Conversations</item>
    </plurals>
    <plurals name="page_message">
        <item quantity="one">Message</item>
        <item quantity="other">Messages</item>
    </plurals>
    <string name="page_folders">Folders</string>
    <string name="page_compose">Compose</string>
    <string name="tile_synchronize">Synchronize</string>
    <string name="tile_unseen">New messages</string>
    <string name="shortcut_refresh">Refresh</string>
    <string name="shortcut_compose">Compose</string>
    <string name="shortcut_setup">Settings</string>
    <plurals name="title_notification_synchronizing">
        <item quantity="one">Synchronizing %1$d account</item>
        <item quantity="other">Synchronizing %1$d accounts</item>
    </plurals>
    <plurals name="title_notification_operations">
        <item quantity="zero"></item>
        <item quantity="one">%1$d operation pending</item>
        <item quantity="other">%1$d operations pending</item>
    </plurals>
    <plurals name="title_notification_unseen">
        <item quantity="one">%1$d new message</item>
        <item quantity="other">%1$d new messages</item>
    </plurals>
    <plurals name="title_notification_unsent">
        <item quantity="one">%1$d message to be sent</item>
        <item quantity="other">%1$d messages to be sent</item>
    </plurals>
    <plurals name="title_tile_unseen">
        <item quantity="one">%1$d new</item>
        <item quantity="other">%1$d new</item>
    </plurals>
    <plurals name="title_selected_messages">
        <item quantity="one">Selected %1$d message</item>
        <item quantity="other">Selected %1$d messages</item>
    </plurals>
    <plurals name="title_moving_messages">
        <item quantity="one">Move %1$d message to %2$s?</item>
        <item quantity="other">Move %1$d messages to %2$s?</item>
    </plurals>
    <plurals name="title_deleting_messages">
        <item quantity="one">Delete %1$d message permanently?</item>
        <item quantity="other">Delete %1$d messages permanently?</item>
    </plurals>
    <plurals name="title_ask_spam">
        <item quantity="one">Treat %1$d message as spam?</item>
        <item quantity="other">Treat %1$d messages as spam?</item>
    </plurals>
    <string name="title_ask_spam_who">Treat message from %1$s as spam?</string>
    <string name="title_notification_waiting">Waiting for suitable connection</string>
    <string name="title_notification_sending">Sending messages</string>
    <string name="title_notification_failed">\'%1$s\' failed</string>
    <string name="title_name_count">%1$s (%2$s)</string>
    <string name="menu_answers">Templates</string>
    <string name="menu_operations">Operations</string>
    <string name="menu_contacts">Local contacts</string>
    <string name="menu_setup">Settings</string>
    <string name="menu_legend">Legend</string>
    <string name="menu_faq">Support</string>
    <string name="menu_issue">Report issue</string>
    <string name="menu_attribution">Attribution</string>
    <string name="menu_privacy">Privacy</string>
    <string name="menu_about">About</string>
    <string name="menu_pro">Pro features</string>
    <string name="menu_invite">Invite</string>
    <string name="menu_rate">Rate this app</string>
    <string name="menu_other">Other apps</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_eula">End-user license agreement</string>
    <string name="title_agree">I agree</string>
    <string name="title_disagree">I disagree</string>
    <string name="title_version">Version %1$s</string>
    <string name="title_list_accounts">Accounts</string>
    <string name="title_list_identities">Identities</string>
    <string name="title_edit_account">Edit account</string>
    <string name="title_edit_identity">Edit identity</string>
    <string name="title_edit_folder">Edit folder</string>
    <string name="title_setup">Settings</string>
    <string name="title_setup_help">Help</string>
    <string name="title_setup_welcome">
        Receiving and sending messages requires setting up an account and an identity like in any other email app.
        The quick setup will create both an account and identity by just asking for your name, email address and password.
        Accounts and identities (aliases) can be setup manually too if needed.
    </string>
    <string name="title_setup_quick">Quick setup</string>
    <string name="title_setup_quick_remark">To quickly setup an account and an identity for most providers</string>
    <string name="title_setup_quick_hint">The quick setup will fetch configuration information from autoconfig.thunderbird.net</string>
    <string name="title_setup_quick_imap">IMAP server to receive messages</string>
    <string name="title_setup_quick_smtp">SMTP server to send messages</string>
    <string name="title_setup_go">Go</string>
    <string name="title_setup_wizard">Wizard</string>
    <string name="title_setup_gmail" translatable="false">Gmail</string>
    <string name="title_setup_other">Other provider</string>
    <string name="title_setup_gmail_support">Authorizing Google accounts will work in official versions only because Android checks the app signature</string>
    <string name="title_setup_gmail_rationale">Please grant permissions to select an account and read your name</string>
    <string name="title_setup_select_account">Select account</string>
    <string name="title_setup_instructions">Setup instructions</string>
    <string name="title_setup_no_settings">No settings found for domain \'%1$s\'</string>
    <string name="title_setup_quick_success">An account and an identity have successfully been added</string>
    <string name="title_setup_quick_failed">You can try to configure an account and an identity below too</string>
    <string name="title_setup_manage">Manage</string>
    <string name="title_setup_grant">Grant</string>
    <string name="title_setup_account">Setup accounts</string>
    <string name="title_setup_account_remark">To receive email</string>
    <string name="title_setup_account_hint">To change color, swipe left/right target folder, etc</string>
    <string name="title_setup_identity">Setup identities</string>
    <string name="title_setup_identity_remark">To send email</string>
    <string name="title_setup_identity_hint">To change name, color, signature, etc</string>
    <string name="title_setup_permissions">Grant permissions</string>
    <string name="title_setup_permissions_remark">To access contact information (optional)</string>
    <string name="title_setup_doze">Setup battery optimizations</string>
    <string name="title_setup_doze_remark">To continuously receive email (optional)</string>
    <string name="title_setup_doze_instructions">In the next dialog, select \"All apps\" at the top, select this app and select and confirm \"Don\'t optimize\"</string>
    <string name="title_setup_doze_battery">High battery usage?</string>
    <string name="title_setup_data">Data saver is enabled</string>
    <string name="title_setup_inbox">Go to messages</string>
    <string name="title_setup_to_do">To do</string>
    <string name="title_setup_done">Done</string>
    <string name="title_setup_export">Export settings</string>
    <string name="title_setup_import">Import settings</string>
    <string name="title_setup_import_do">Imported accounts will be added without overwriting any existing ones</string>
    <string name="title_setup_password">Password</string>
    <string name="title_setup_password_repeat">Repeat password</string>
    <string name="title_setup_password_missing">Password missing</string>
    <string name="title_setup_notifications">Manage notifications</string>
    <string name="title_advanced_badge">Show unread count badge on icon</string>
    <string name="title_advanced_unseen_ignored">Badge shows current notification count</string>
    <string name="title_advanced_notify_preview">Message preview in notifications</string>
    <string name="title_advanced_notify_actions">Notification actions</string>
    <string name="title_advanced_notify_action_trash">Trash</string>
    <string name="title_advanced_notify_action_junk">Spam</string>
    <string name="title_advanced_notify_action_archive">Archive</string>
    <string name="title_advanced_notify_action_reply">Reply</string>
    <string name="title_advanced_notify_action_reply_direct">Direct reply</string>
    <string name="title_advanced_notify_action_flag">Star</string>
    <string name="title_advanced_notify_action_seen">Read</string>
    <string name="title_advanced_notify_action_snooze">Snooze</string>
    <string name="title_advanced_notify_remove">Tapping on notification removes it</string>
    <string name="title_advanced_biometrics_notify">Notification content shown when biometric auth used</string>
    <string name="title_advanced_light">Use notification light</string>
    <string name="title_advanced_sound">Select notification sound</string>
    <string name="title_advanced_alert_once" translatable="false">MIUI notification sound workaround</string>
    <string name="title_advanced_badge_hint">Only available on supported launchers</string>
    <string name="title_advanced_notify_action_hint">At most three actions will be shown</string>
    <string name="title_advanced_notify_remove_hint">New message notifications will always be removed on being swiped away and on marking messages read</string>
    <string name="title_advanced_notify_manage_hint">Tap on the channel name \'Notifications\' to set the default notification sound, etc</string>
    <string name="title_advanced_preview_hint">Only available when message text has been downloaded</string>
    <string name="title_minutes">Minutes</string>
    <string name="title_pro_feature">This is a pro feature</string>
</resources>